ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/290_varM_disqualified_as_keyword_2.sol
contract test {
    fn f() public {
        intM should = 4;
    }
}
// ----
// DeclarationError 7920: (50-54): Identifier not found or not unique.
